RESOLVED FIXED 52001
Relaunching the web process fails to revivify WKViews on Windows
https://bugs.webkit.org/show_bug.cgi?id=52001
Summary Relaunching the web process fails to revivify WKViews on Windows
Adam Roben (:aroben)
Reported 2011-01-06 12:03:13 PST
Relaunching the web process fails to revivify WKViews on Windows
Attachments
Patch (1.41 KB, patch)
2011-01-06 12:04 PST, Adam Roben (:aroben)
adachan: review+
Adam Roben (:aroben)
Comment 1 2011-01-06 12:04:00 PST
Adam Roben (:aroben)
Comment 2 2011-01-06 12:52:35 PST
Note You need to log in before you can comment on or make changes to this bug.