Make WKViews work on Windows after a crashed web process gets relaunched

Fixes <http://webkit.org/b/52001> Relaunching the web process fails to
revivify WKViews on Windows

Reviewed by Ada Chan.

* UIProcess/win/WebView.cpp:
(WebKit::WebView::didRelaunchProcess): Implemented by porting code from
-[WKView _didRelaunchProcess].

git-svn-id: svn://svn.chromium.org/blink/trunk@75184 bbb929c8-8fbe-4397-9dbb-9b2b20218538