third_party/WebKit/WebKit2/UIProcess/win/WebView.cpp
@@ -579,6 +579,13 @@ void WebView::processDidCrash()
 
 void WebView::didRelaunchProcess()
 {
+    RECT clientRect;
+    if (!::GetClientRect(m_window, &clientRect))
+        return;
+
+    m_page->reinitializeWebPage(IntRect(clientRect).size());
+    updateActiveState();
+    m_page->setFocused(::GetFocus() == m_window);
 }
 
 void WebView::takeFocus(bool)
